--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id 'java'
     id 'maven-publish'
     id "com.katalon.gradle-plugin" version "0.0.7"
-    id "com.relevantcodes.extentreports"
 }
 
 repositories {
@@ -23,10 +22,10 @@ repositories {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
      maven { url "https://plugins.gradle.org/m2/" }
-     gradlePluginPortal()
 }
 
 dependencies {
+	implementation 'org.json:json:20160212'
     implementation 'com.github.jai-imageio:jai-imageio-core:1.3.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.google.zxing:javase:3.3.0'
@@ -54,6 +53,8 @@ dependencies {
     implementation 'net.lightbody.bmp:browsermob-core-littleproxy:2.1.0-beta-3'
     testImplementation 'net.sourceforge.tess4j:tess4j:4.3.1'
 }
+
+apply plugin: "com.katalon.gradle-plugin"
 
 group = 'Aspire_TA_Aspire_Generic_Framework_Java'
 version = '1.0.0'
